--- a/CocktailApp-master/app/src/main/res/layout/cocktail_fragment.xml
+++ b/CocktailApp-master/app/src/main/res/layout/cocktail_fragment.xml
@@ -31,10 +31,9 @@
             app:layout_constraintTop_toTopOf="parent"/>
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-            android:id="@+id/swpRefreshRow"
+            android:id="@+id/swpRefresh"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:visibility="visible"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -45,37 +44,10 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 tools:itemCount="10"
+                android:visibility="visible"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:listitem="@layout/row_cocktail"/>
-
-
-
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
-        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-            android:id="@+id/swpRefreshGrid"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:visibility="gone"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/svCocktail">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/gdCocktails"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                tools:itemCount="10"
-                tools:listitem="@layout/grid_cocktail"/>
-
-
-
-        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
-
-
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
